--- a/ClothSimulator/ClothSimulator.vcxproj
+++ b/ClothSimulator/ClothSimulator.vcxproj
@@ -153,6 +153,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cloth.h" />
+    <ClInclude Include="Constraint.h" />
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="vec3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
